# tomato

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/tomato/: __init__.py  __main__.py  etc.py  log.py  utils.py
src/tomato/api/: cli.py
tests/: test_chain_callables.py  test_loop_flags.py
tests/cli/: test_cli_log_level.py  test_cli_version_callback.py
tests/etc/: test_get.py
tests/utils/: test_chain_callables.py  test_loop_flags.py
var/etc/: defaults.toml
